--- a/streaming/data_taxi.ipynb
+++ b/streaming/data_taxi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "[3758766 rows x 4 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "[251568 rows x 4 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "[4615 rows x 4 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,6 @@
        "      <th>tpep_dropoff_datetime</th>\n",
        "      <th>PULocationID</th>\n",
        "      <th>DOLocationID</th>\n",
-       "      <th>alignedtime</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -543,7 +542,6 @@
        "      <td>2019-02-01 01:00:01</td>\n",
        "      <td>79</td>\n",
        "      <td>79</td>\n",
-       "      <td>2019-02-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1611</th>\n",
@@ -551,7 +549,6 @@
        "      <td>2019-02-01 01:00:01</td>\n",
        "      <td>231</td>\n",
        "      <td>144</td>\n",
-       "      <td>2019-02-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1377</th>\n",
@@ -559,7 +556,6 @@
        "      <td>2019-02-01 01:00:03</td>\n",
        "      <td>79</td>\n",
        "      <td>234</td>\n",
-       "      <td>2019-02-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1287</th>\n",
@@ -567,7 +563,6 @@
        "      <td>2019-02-01 01:00:03</td>\n",
        "      <td>239</td>\n",
        "      <td>75</td>\n",
-       "      <td>2019-02-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1991</th>\n",
@@ -575,11 +570,9 @@
        "      <td>2019-02-01 01:00:05</td>\n",
        "      <td>79</td>\n",
        "      <td>246</td>\n",
-       "      <td>2019-02-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -591,7 +584,6 @@
        "      <td>2019-02-01 02:59:48</td>\n",
        "      <td>148</td>\n",
        "      <td>166</td>\n",
-       "      <td>2019-02-01 02:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12173</th>\n",
@@ -599,7 +591,6 @@
        "      <td>2019-02-01 02:59:50</td>\n",
        "      <td>148</td>\n",
        "      <td>68</td>\n",
-       "      <td>2019-02-01 02:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11281</th>\n",
@@ -607,7 +598,6 @@
        "      <td>2019-02-01 02:59:51</td>\n",
        "      <td>162</td>\n",
        "      <td>186</td>\n",
-       "      <td>2019-02-01 02:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12553</th>\n",
@@ -615,7 +605,6 @@
        "      <td>2019-02-01 02:59:52</td>\n",
        "      <td>230</td>\n",
        "      <td>186</td>\n",
-       "      <td>2019-02-01 02:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12775</th>\n",
@@ -623,44 +612,30 @@
        "      <td>2019-02-01 02:59:56</td>\n",
        "      <td>162</td>\n",
        "      <td>170</td>\n",
-       "      <td>2019-02-01 02:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5217 rows × 5 columns</p>\n",
+       "<p>5217 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      tpep_pickup_datetime tpep_dropoff_datetime  PULocationID  DOLocationID  \\\n",
-       "4973   2019-02-01 00:55:10   2019-02-01 01:00:01            79            79   \n",
-       "1611   2019-02-01 00:52:03   2019-02-01 01:00:01           231           144   \n",
-       "1377   2019-02-01 00:53:38   2019-02-01 01:00:03            79           234   \n",
-       "1287   2019-02-01 00:52:41   2019-02-01 01:00:03           239            75   \n",
-       "1991   2019-02-01 00:47:30   2019-02-01 01:00:05            79           246   \n",
-       "...                    ...                   ...           ...           ...   \n",
-       "13427  2019-02-01 02:34:28   2019-02-01 02:59:48           148           166   \n",
-       "12173  2019-02-01 02:48:07   2019-02-01 02:59:50           148            68   \n",
-       "11281  2019-02-01 02:53:58   2019-02-01 02:59:51           162           186   \n",
-       "12553  2019-02-01 02:58:09   2019-02-01 02:59:52           230           186   \n",
-       "12775  2019-02-01 02:56:39   2019-02-01 02:59:56           162           170   \n",
+       "      tpep_pickup_datetime tpep_dropoff_datetime  PULocationID  DOLocationID\n",
+       "4973   2019-02-01 00:55:10   2019-02-01 01:00:01            79            79\n",
+       "1611   2019-02-01 00:52:03   2019-02-01 01:00:01           231           144\n",
+       "1377   2019-02-01 00:53:38   2019-02-01 01:00:03            79           234\n",
+       "1287   2019-02-01 00:52:41   2019-02-01 01:00:03           239            75\n",
+       "1991   2019-02-01 00:47:30   2019-02-01 01:00:05            79           246\n",
+       "...                    ...                   ...           ...           ...\n",
+       "13427  2019-02-01 02:34:28   2019-02-01 02:59:48           148           166\n",
+       "12173  2019-02-01 02:48:07   2019-02-01 02:59:50           148            68\n",
+       "11281  2019-02-01 02:53:58   2019-02-01 02:59:51           162           186\n",
+       "12553  2019-02-01 02:58:09   2019-02-01 02:59:52           230           186\n",
+       "12775  2019-02-01 02:56:39   2019-02-01 02:59:56           162           170\n",
        "\n",
-       "              alignedtime  \n",
-       "4973  2019-02-01 00:00:00  \n",
-       "1611  2019-02-01 00:00:00  \n",
-       "1377  2019-02-01 00:00:00  \n",
-       "1287  2019-02-01 00:00:00  \n",
-       "1991  2019-02-01 00:00:00  \n",
-       "...                   ...  \n",
-       "13427 2019-02-01 02:00:00  \n",
-       "12173 2019-02-01 02:00:00  \n",
-       "11281 2019-02-01 02:00:00  \n",
-       "12553 2019-02-01 02:00:00  \n",
-       "12775 2019-02-01 02:00:00  \n",
-       "\n",
-       "[5217 rows x 5 columns]"
+       "[5217 rows x 4 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,33 +650,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preloaded_taxi_inflow = pre_loaded_data.drop(['tpep_pickup_datetime', 'PULocationID', 'alignedtime'], axis=1)\n",
-    "preloaded_taxi_outflow = pre_loaded_data.drop(['tpep_dropoff_datetime', 'DOLocationID', 'alignedtime'], axis=1)\n",
+    "preloaded_taxi_inflow = pre_loaded_data.drop(['tpep_pickup_datetime', 'PULocationID'], axis=1)\n",
+    "preloaded_taxi_outflow = pre_loaded_data.drop(['tpep_dropoff_datetime', 'DOLocationID'], axis=1)\n",
     "\n",
-    "remaining_taxi_inflow = remaining_data.drop(['tpep_pickup_datetime', 'PULocationID', 'alignedtime'], axis=1)\n",
-    "remaining_taxi_outflow = remaining_data.drop(['tpep_dropoff_datetime', 'DOLocationID', 'alignedtime'], axis=1)"
+    "remaining_taxi_inflow = remaining_data.drop(['tpep_pickup_datetime', 'PULocationID'], axis=1)\n",
+    "remaining_taxi_outflow = remaining_data.drop(['tpep_dropoff_datetime', 'DOLocationID'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/n3/ddy0x11x3b54hh3tcq3sqdxc0000gn/T/ipykernel_44083/2395513157.py:8: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  preloaded_taxi_inflow = preloaded_taxi_inflow.append(remaining_taxi_inflow.iloc[0:10])\n",
-      "/var/folders/n3/ddy0x11x3b54hh3tcq3sqdxc0000gn/T/ipykernel_44083/2395513157.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  preloaded_taxi_outflow = preloaded_taxi_outflow.append(remaining_taxi_outflow.iloc[0:10])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "preloaded_taxi_inflow['tpep_dropoff_datetime'] = preloaded_taxi_inflow['tpep_dropoff_datetime'].astype(str)\n",
     "preloaded_taxi_outflow['tpep_pickup_datetime'] = preloaded_taxi_outflow['tpep_pickup_datetime'].astype(str)\n",
@@ -712,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,14 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n3/ddy0x11x3b54hh3tcq3sqdxc0000gn/T/ipykernel_44083/2342562123.py:11: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/n3/ddy0x11x3b54hh3tcq3sqdxc0000gn/T/ipykernel_3657/2342562123.py:11: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  preloaded_taxi_outflow = preloaded_taxi_outflow.append(remaining_taxi_outflow.iloc[0:10])\n"
      ]
     },
@@ -768,18 +732,13 @@
        "      <td>68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3245</th>\n",
-       "      <td>2019-02-01 00:00:03</td>\n",
-       "      <td>230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1014</th>\n",
        "      <td>2019-02-01 00:00:03</td>\n",
        "      <td>229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6212</th>\n",
-       "      <td>2019-02-01 00:00:04</td>\n",
+       "      <th>3245</th>\n",
+       "      <td>2019-02-01 00:00:03</td>\n",
        "      <td>230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -788,29 +747,34 @@
        "      <td>186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1279</th>\n",
+       "      <td>2019-02-01 00:00:04</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3390</th>\n",
-       "      <td>2019-02-01 00:31:15</td>\n",
-       "      <td>87</td>\n",
+       "      <th>5764</th>\n",
+       "      <td>2019-02-01 00:49:26</td>\n",
+       "      <td>234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4171</th>\n",
-       "      <td>2019-02-01 00:34:58</td>\n",
-       "      <td>231</td>\n",
+       "      <th>1725</th>\n",
+       "      <td>2019-02-01 00:49:23</td>\n",
+       "      <td>148</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6716</th>\n",
-       "      <td>2019-02-01 00:35:16</td>\n",
-       "      <td>158</td>\n",
+       "      <th>4311</th>\n",
+       "      <td>2019-02-01 00:51:23</td>\n",
+       "      <td>249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3444</th>\n",
-       "      <td>2019-02-01 00:35:47</td>\n",
-       "      <td>13</td>\n",
+       "      <th>6003</th>\n",
+       "      <td>2019-02-01 00:52:58</td>\n",
+       "      <td>140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3448</th>\n",
@@ -819,27 +783,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4639 rows × 2 columns</p>\n",
+       "<p>4625 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                     time  region_id\n",
        "2207  2019-02-01 00:00:02         68\n",
-       "3245  2019-02-01 00:00:03        230\n",
        "1014  2019-02-01 00:00:03        229\n",
-       "6212  2019-02-01 00:00:04        230\n",
+       "3245  2019-02-01 00:00:03        230\n",
        "6006  2019-02-01 00:00:04        186\n",
+       "1279  2019-02-01 00:00:04         43\n",
        "...                   ...        ...\n",
-       "3390  2019-02-01 00:31:15         87\n",
-       "4171  2019-02-01 00:34:58        231\n",
-       "6716  2019-02-01 00:35:16        158\n",
-       "3444  2019-02-01 00:35:47         13\n",
+       "5764  2019-02-01 00:49:26        234\n",
+       "1725  2019-02-01 00:49:23        148\n",
+       "4311  2019-02-01 00:51:23        249\n",
+       "6003  2019-02-01 00:52:58        140\n",
        "3448  2019-02-01 00:35:50        158\n",
        "\n",
-       "[4639 rows x 2 columns]"
+       "[4625 rows x 2 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,10 +845,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m     producer\u001b[39m.\u001b[39msend(\u001b[39m'\u001b[39m\u001b[39mtaxi_inflow\u001b[39m\u001b[39m'\u001b[39m, inflow_string\u001b[39m.\u001b[39mencode(\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m     10\u001b[0m     producer\u001b[39m.\u001b[39msend(\u001b[39m'\u001b[39m\u001b[39mtaxi_outflow\u001b[39m\u001b[39m'\u001b[39m, outflow_string\u001b[39m.\u001b[39mencode(\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m---> 11\u001b[0m     time\u001b[39m.\u001b[39msleep(\u001b[39m0.1\u001b[39m)\n\u001b[1;32m     13\u001b[0m producer\u001b[39m.\u001b[39mflush()  \u001b[39m# Wait for any outstanding messages to be transmitted and delivery acknowledgments received\u001b[39;00m\n\u001b[1;32m     14\u001b[0m producer\u001b[39m.\u001b[39mclose()\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
+    "producer = KafkaProducer(bootstrap_servers='localhost:9092')\n",
+    "\n",
     "N = remaining_taxi_inflow.shape[0]\n",
     "for i in range(N):\n",
     "    inflow_string = remaining_taxi_inflow.iloc[i].to_json()\n",
@@ -893,7 +871,7 @@
     "    # To send a message\n",
     "    producer.send('taxi_inflow', inflow_string.encode('utf-8'))\n",
     "    producer.send('taxi_outflow', outflow_string.encode('utf-8'))\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(0.1)\n",
     "\n",
     "producer.flush()  # Wait for any outstanding messages to be transmitted and delivery acknowledgments received\n",
     "producer.close()"
