--- a/streaming/commands.ipynb
+++ b/streaming/commands.ipynb
@@ -104,7 +104,9 @@
    },
    "outputs": [],
    "source": [
-    "nohup python -u main.py > main.log  2>&1 &"
+    "nohup python -u main.py > main.log  2>&1 &\n",
+    "\n",
+    "./bin/sql-client.sh -f /Users/mhy/Code/pythonworkspace/capstone/streaming/streaming.sql"
    ]
   }
  ],
